Add example passwords

--- a/config/travis_secrets.yaml
+++ b/config/travis_secrets.yaml
@@ -1,7 +1,7 @@
 
 # Use this file to store secrets like usernames and passwords.
 # Learn more at https://home-assistant.io/docs/configuration/secrets/
-http_password: 
-icloud_pw: 
-recorder_db_url: 
-telegram_api: 
+http_password: example
+icloud_pw: example
+recorder_db_url: example
+telegram_api: example
