--- a/config/automations.yaml
+++ b/config/automations.yaml
@@ -137,3 +137,12 @@
     data: 
       title: 'New Home Assistant Release'
       message: "Home Assistant  {{ states.updater.updater.state }}  is now available."
+
+- alias: Pull config after Traivs CI Build
+  trigger:
+    - platform: state
+      entity_id: sensor.travis_ci_state
+      from: 'started'
+      to: 'passed'
+  action:
+    - service: shell_command.restart_hass
