--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -66,7 +66,7 @@ map:
 sun:
 
 # Weather prediction
-sensor: !include sensors.yaml
+sensor: !include_dir_merge_list sensors/
 
 # Text to speech
 tts:
