--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -75,10 +75,10 @@ tts:
 # Cloud
 cloud:
 
-group: !include groups.yaml
-automation: !include automations.yaml
-scene: !include scenes.yaml
-script: !include scripts.yaml
+group: !include_dir_merge_list groups/
+automation: !include_dir_merge_list automations/
+scene: !include_dir_merge_list scenes/
+script: !include_dir_merge_list scripts/
 
 switch:
   - platform: tplink
