--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -13,100 +13,51 @@ homeassistant:
   # Customization file
   customize: !include customize.yaml
 
-# Show links to resources in log and frontend
-#introduction:
-zone:
-  - name: Home
-    latitude: 51.203907559165998
-    longitude: 6.7665701879597
-    radius: 90
-    icon: mdi:account-multiple
-
 logger:
 
-# Enables the frontend
 frontend:
 
-# Enables configuration UI
 config:
 
 http:
-  # Secrets are defined in the file secrets.yaml
   api_password: !secret http_password
-  # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
   base_url: ha.tuxcall.de:8123
 
-# Checks for available updates
-# Note: This component will send some information about your system to
-# the developers to assist with development of Home Assistant.
-# For more information, please see:
-# https://home-assistant.io/blog/2016/10/25/explaining-the-updater/
-updater:
-  # Optional, allows Home Assistant developers to focus on popular components.
-  # include_used_components: true
-
-# Discover some devices automatically
-#discovery:
-
-# Allows you to issue voice commands from the frontend in enabled browsers
-conversation:
-
-# Enables support for tracking state changes over time
 recorder:
   db_url: !secret recorder_db_url
+
 history:
 
-# View all events in a logbook
 logbook:
 
-# Enables a map showing the location of tracked devices
 map:
 
-# Track the sun
 sun:
 
-# Weather prediction
 sensor: !include_dir_merge_list sensors/
 
-# Text to speech
 tts:
   - platform: google
 
-# Cloud
 cloud:
 
+zone: !include_dir_merge_list zones/
 group: !include_dir_merge_list groups/
 automation: !include_dir_merge_list automations/
 scene: !include_dir_merge_list scenes/
 script: !include_dir_merge_list scripts/
 
-switch:
-  - platform: tplink
-    host: hs110-fernseher.swapoff.de
-    name: Fernseher
-
-  - platform: tplink
-    host: 192.168.113.102
-    name: Waschmaschine
-
-  - platform: flux
-    mode: mired
-    disable_brightness_adjust: True
-    lights:
-      - light.tradfri_bulb_gu10_ws_400lm
-      - light.tradfri_bulb_gu10_ws_400lm_2
-      - light.tradfri_bulb_gu10_ws_400lm_3
-      - light.tradfri_bulb_gu10_ws_400lm_4
-      - light.tradfri_bulb_gu10_ws_400lm_5
-      - light.tradfri_bulb_gu10_ws_400lm_6
+switch: !include_dir_merge_list switches/
 
 homekit:
   auto_start: True
   filter:
     exclude_domains:
       - automation
+
 tradfri:
   host: GW-DCEFCAB837FB.swapoff.de
+
 cast:
   media_player:
   - host: 192.168.113.103
@@ -131,7 +82,6 @@ notify:
   - name: telegram_notify
     platform: telegram
     chat_id: 659192698
-
 
 shell_command:
   git_pull: 'bash /config/git-pull.sh'  
