--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -42,7 +42,7 @@ tts:
 cloud:
 
 zone: !include_dir_merge_list zones/
-group: !include_dir_merge_list groups/
+group: !include_dir_merge_named groups/
 automation: !include_dir_merge_list automations/
 scene: !include_dir_merge_list scenes/
 script: !include_dir_merge_list scripts/
