--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -64,6 +64,10 @@ device_tracker:
 
 influxdb:
   host: 192.168.113.17
+  exclude:
+    entities:
+      -  sensor.hp_ilo_server_health
+      -  sensor.hp_ilo_server_health2
 
 telegram_bot:
   - platform: polling
