--- a/config/sensors/sensors.yaml
+++ b/config/sensors/sensors.yaml
@@ -2,8 +2,7 @@
   api_key: !secret github_key
   repository:
     - home-assistant-config
-  branch:
-    - master
+  branch: "master"
   monitored_conditions:
     - last_build_state
     - state
