Add camera automation

--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -52,7 +52,23 @@ zone: !include_dir_merge_list zones/
 group: !include_dir_merge_named groups/
 automation: !include_dir_merge_list automations/
 scene: !include_dir_merge_list scenes/
-script: !include_dir_merge_list scripts/
+#script: !include_dir_merge_list scripts/
+script:
+  foscam_off:
+    sequence:
+    - service: switch.turn_off
+      data:
+        entity_id: switch.foscam_motion
+    - service: shell_command.foscam_turn_off
+  foscam_on:
+    sequence:
+    - service: switch.turn_off
+      data:
+        entity_id: switch.foscam_motion
+    - service: shell_command.foscam_turn_on
+    - service: switch.turn_on
+      data:
+        entity_id: switch.foscam_motion
 
 switch: !include_dir_merge_list switches/
 
@@ -99,6 +115,8 @@ notify:
 
 shell_command:
   git_pull: 'bash /config/git-pull.sh'  
+  foscam_turn_off: !secret foscam_turn_off
+  foscam_turn_on: !secret foscam_turn_on
 
 zha:
   usb_path: /dev/ttyUSB0
