Add scene "Baden" adjust automation timeout

--- a/config/automations/sparen.yaml
+++ b/config/automations/sparen.yaml
@@ -37,7 +37,7 @@
       value_template: '{{ state.attributes.temperature }}'
       above: 26
       for:
-        seconds: 10
+        hours: 1
   action:
     - service: climate.set_temperature
       data:
