--- a/config/automations/sparen.yaml
+++ b/config/automations/sparen.yaml
@@ -47,3 +47,80 @@
       data:
         title: '*HA Automation*'
         message: "Bad Heizung aus"
+
+- alias: Heizung aus wenn weg
+  trigger:
+    - platform: state
+      entity_id: group.sebastian
+      to: 'not_home'
+      for:
+        minutes: 10
+  action:
+    - service: climate.set_temperature
+      data:
+        entity_id: climate.000393c994ddf2
+        temperature: 17
+    - service: climate.set_temperature
+      data:
+        entity_id: climate.meq1884545
+        temperature: 17
+    - service: notify.telegram_notify
+      data:
+        title: '*HA Automation*'
+        message: "Heizung aus, weg"
+
+- alias: Heizung Urlaubsmodus an
+  trigger:
+    - platform: state
+      entity_id: group.sebastian
+      to: 'not_home'
+      for:
+        hours: 24
+  action:
+    - service: climate.set_operation_mode
+      data:
+        entity_id: climate.000393c994ddf2
+        operation_mode: manual
+    - service: climate.set_operation_mode
+      data:
+        entity_id: climate.meq1884545
+        operation_mode: manual
+    - service: climate.set_temperature
+      data:
+        entity_id: climate.000393c994ddf2
+        temperature: 10
+    - service: climate.set_temperature
+      data:
+        entity_id: climate.meq1884545
+        temperature: 10
+    - service: notify.telegram_notify
+      data:
+        title: '*HA Automation*'
+        message: "Urlaubsmodus an"
+
+- alias: Heizung Urlaubsmodus aus
+  trigger:
+    - platform: state
+      entity_id: group.sebastian
+      to: 'home'
+  action:
+    - service: climate.set_operation_mode
+      data:
+        entity_id: climate.000393c994ddf2
+        operation_mode: auto
+    - service: climate.set_operation_mode
+      data:
+        entity_id: climate.meq1884545
+        operation_mode: auto
+    - service: climate.set_temperature
+      data:
+        entity_id: climate.000393c994ddf2
+        temperature: 21
+    - service: climate.set_temperature
+      data:
+        entity_id: climate.meq1884545
+        temperature: 21
+    - service: notify.telegram_notify
+      data:
+        title: '*HA Automation*'
+        message: "Urlaubsmodus aus"
