Only disable vacation mode if it was on

--- a/config/automations/sparen.yaml
+++ b/config/automations/sparen.yaml
@@ -100,3 +100,6 @@
       data:
         title: '*HA Automation*'
         message: "Urlaubsmodus aus"
+  condition:
+    - condition: template
+      value_template: "{{ is_state_attr('climate.meq1884545', 'operation_mode', 'manual') }}"
