--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -73,16 +73,24 @@ script:
         entity_id: switch.foscam_motion
   fernsehen_remote:
     sequence:
-      service: remote.turn_on
-      data:
-        entity_id: remote.wohnzimmer
-        activity: "Watch TV"
+      - service: switch.turn_on
+        data:
+          entity_id: switch.fernseher
+      - wait_template: "{{ not is_state('media_player.wohnzimmer','unavailable') }}"
+      - service: remote.turn_on
+        data:
+          entity_id: remote.wohnzimmer
+          activity: "Watch TV"
   switch_remote:
     sequence:
-      service: remote.turn_on
-      data:
-        entity_id: remote.wohnzimmer
-        activity: "Switch"
+      - service: switch.turn_on
+        data:
+          entity_id: switch.fernseher
+      - wait_template: "{{ not is_state('media_player.wohnzimmer','unavailable') }}"
+      - service: remote.turn_on
+        data:
+          entity_id: remote.wohnzimmer
+          activity: "Switch"
 
 switch: !include_dir_merge_list switches/
 
