--- a/config/groups/heating.yaml
+++ b/config/groups/heating.yaml
@@ -1,4 +1,6 @@
 heizung:
   entities:
-    - climate.000393c994ddf2
-    - climate.meq1884545
+    - climate.t_bad
+    - climate.t_wohnzimmer
+    - climate.t_kueche
+    - climate.t_schlafzimmer
