--- a/config/groups/views.yaml
+++ b/config/groups/views.yaml
@@ -4,7 +4,7 @@ default_view:
   entities:
     - group.schlafzimmer
     - group.wohnzimmer
-    - group.wohnzimmer_geräte
+    - group.wohnzimmer_geraete
     - group.sebastian
     - group.kueche
     - group.bad
