--- a/config/switches/fernsehen.yaml
+++ b/config/switches/fernsehen.yaml
@@ -39,3 +39,16 @@
         data:
           entity_id: remote.wohnzimmer
           activity: "-1"
+    chromecacst:
+      friendly_name: Chromecast
+      value_template: "{{ is_state_attr('remote.wohnzimmer', 'current_activity', 'Chromecast') }}"
+      turn_on:
+        service: remote.turn_on
+        data:
+          entity_id: remote.wohnzimmer
+          activity: "Chromecast"
+      turn_off:
+        service: remote.turn_on
+        data:
+          entity_id: remote.wohnzimmer
+          activity: "-1"
