--- a/config/travis_secrets.yaml
+++ b/config/travis_secrets.yaml
@@ -8,3 +8,5 @@ telegram_api: example
 github_key: example
 ilo_nas_password: example
 influx_password: example
+google_project: example
+google_api: example
