Add 'flur' to the overview

--- a/config/groups/views.yaml
+++ b/config/groups/views.yaml
@@ -9,6 +9,7 @@ default_view:
     - group.kueche
     - group.bad
     - group.heizung
+    - group.flur
     - sun.sun
     - sensor.yr_symbol
     - sensor.yr_temperature
