--- a/config/groups/rooms.yaml
+++ b/config/groups/rooms.yaml
@@ -14,6 +14,7 @@ schlafzimmer:
     - sensor.luftfeuchtigkeit_schlafzimmer
     - sensor.temperatur_schlafzimmer
     - binary_sensor.r_schlafzimmer
+    - media_player.schlafzimmer
 wohnzimmer:
   name: Wohnzimmer Licht
   entities:
