--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -22,6 +22,13 @@ logger:
 device_sun_light_trigger:
   device_group: group.sebastian
 
+proximity:
+  home: 
+    devices:
+      - group.sebastian
+    tolerance: 50
+    unit_of_measurement: km
+
 frontend:
 
 config:
