--- a/config/switches/fernsehen.yaml
+++ b/config/switches/fernsehen.yaml
@@ -39,7 +39,7 @@
         data:
           entity_id: remote.wohnzimmer
           activity: "-1"
-    chromecacst:
+    chromecast:
       friendly_name: Chromecast
       value_template: "{{ is_state_attr('remote.wohnzimmer', 'current_activity', 'Chromecast') }}"
       turn_on:
